[project]
name = "botbrake"
version = "0.1.0"
description = "URICrypt-aware HTTP log abuse detection system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
botbrake = "botbrake.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/botbrake"]
